add unavailable icon in current song dock when no cover is available

--- a/songbook.qrc
+++ b/songbook.qrc
@@ -12,6 +12,7 @@
      <file>icons/text-x-generic.png</file>
      <file>icons/image-x-generic.png</file>
      <file>icons/unavailable.png</file>
+     <file>icons/unavailable-large.png</file>
      <file>icons/network-server.png</file>
      <file>icons/view-refresh.png</file>
      <file>icons/patacrep.png</file>
