create tango theme as fallback
    note: this is a squash of several commits to avoid huge amount of data due
    to the first integration of the all "tango" theme instead of only ~10 icons

    a few change, mainly added files ad selection of theme at the beginnig by
    checking if the current theme as document open there is still some
    "jumping" on os-x when tab bar change, but we can live with it note that
    tabs can be move which introduce a bug that 'Library is assumes to be tab
    0'

    extract interseting icon from tango theme and add them in icons/tango
    subdirectory with the same structure as in full tango theme.  made a
    tango.qrc with

    [icons/tango] $rcc -project

    and just fixing the <<prefix='icon/tango'>> by hand
    add a few lines in main.cc to use this theme as a fallback if open-document is not in the current theme

    add tango.qrc in CMakeList

--- a/songbook.qrc
+++ b/songbook.qrc
@@ -9,4 +9,13 @@
     <file>icons/unselect-all.png</file>
     <file>icons/invert-selection.png</file>
 </qresource>
+<qresource prefix="icons/thm">
+    <file alias="index.theme">icons/thm/index.theme</file>
+
+    <file alias="16x16/application-exit.png">icons/thm/16x16/stop.png</file>
+    <file alias="16x16/document-open.png">icons/thm/16x16/folder_page.png</file>
+    <file >icons/thm/16x16/document-open.png</file>
+</qresource>
+
+
 </RCC>
