--- a/songbook.qrc
+++ b/songbook.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>icons/patacrep.png</file>
+    <file alias="xxx.png" >icons/xxx.png</file>
     <file>icons/attention.png</file>
     <file>icons/en.png</file>
     <file>icons/fr.png</file>
