--- a/icons/macos/macos.qrc
+++ b/icons/macos/macos.qrc
@@ -55,6 +55,9 @@
     <file>32x32/mimetypes/audio-x-generic.png</file>
     <file>32x32/places/folder-remote.png</file>
     <file>32x32/status/image-missing.png</file>
+    <file>48x48/places/flag-fr.png</file>
+    <file>48x48/places/flag-es.png</file>
+    <file>48x48/places/flag-en.png</file>
     <file>scalable/actions/document-new.svg</file>
     <file>scalable/actions/document-open.svg</file>
     <file>scalable/actions/document-save-as.svg</file>
@@ -72,6 +75,7 @@
     <file>scalable/categories/preferences-desktop-theme.svg</file>
     <file>scalable/mimetypes/audio-x-generic.svg</file>
     <file>scalable/mimetypes/document-export.svg</file>
+    <file>48x48/mimetypes/document-export.png</file>
     <file>scalable/places/folder-remote.svg</file>
     <file>scalable/status/image-missing.svg</file>
     <file>128x128/status/image-missing.png</file>
