--- a/icons/tango/tango.qrc
+++ b/icons/tango/tango.qrc
@@ -13,6 +13,7 @@
     <file>16x16/actions/edit-undo.png</file>
     <file>16x16/actions/folder-new.png</file>
     <file>16x16/actions/view-refresh.png</file>
+    <file>16x16/apps/accessories-text-editor.png</file>
     <file>16x16/categories/preferences-system.png</file>
     <file>16x16/categories/preferences-system-network.png</file>
     <file>16x16/categories/preferences-desktop-theme.png</file>
@@ -31,6 +32,7 @@
     <file>22x22/actions/edit-undo.png</file>
     <file>22x22/actions/folder-new.png</file>
     <file>22x22/actions/view-refresh.png</file>
+    <file>22x22/apps/accessories-text-editor.png</file>
     <file>22x22/categories/preferences-system.png</file>
     <file>22x22/categories/preferences-system-network.png</file>
     <file>22x22/categories/preferences-desktop-theme.png</file>
@@ -49,6 +51,7 @@
     <file>32x32/actions/edit-undo.png</file>
     <file>32x32/actions/folder-new.png</file>
     <file>32x32/actions/view-refresh.png</file>
+    <file>32x32/apps/accessories-text-editor.png</file>
     <file>32x32/categories/preferences-system.png</file>
     <file>32x32/categories/preferences-system-network.png</file>
     <file>32x32/categories/preferences-desktop-theme.png</file>
@@ -70,6 +73,7 @@
     <file>scalable/actions/edit-undo.svg</file>
     <file>scalable/actions/folder-new.svg</file>
     <file>scalable/actions/view-refresh.svg</file>
+    <file>scalable/apps/accessories-text-editor.svg</file>
     <file>scalable/categories/preferences-system.svg</file>
     <file>scalable/categories/preferences-system-network.svg</file>
     <file>scalable/categories/preferences-desktop-theme.svg</file>
