Imported Upstream version 0.6

--- a/icons/tango/tango.qrc
+++ b/icons/tango/tango.qrc
@@ -13,10 +13,12 @@
     <file>16x16/actions/edit-undo.png</file>
     <file>16x16/actions/folder-new.png</file>
     <file>16x16/actions/view-refresh.png</file>
+    <file>16x16/apps/accessories-text-editor.png</file>
     <file>16x16/categories/preferences-system.png</file>
     <file>16x16/categories/preferences-system-network.png</file>
     <file>16x16/categories/preferences-desktop-theme.png</file>
     <file>16x16/mimetypes/audio-x-generic.png</file>
+    <file>16x16/mimetypes/document-export.png</file>
     <file>16x16/places/folder-remote.png</file>
     <file>16x16/status/image-missing.png</file>
     <file>22x22/actions/document-new.png</file>
@@ -31,10 +33,12 @@
     <file>22x22/actions/edit-undo.png</file>
     <file>22x22/actions/folder-new.png</file>
     <file>22x22/actions/view-refresh.png</file>
+    <file>22x22/apps/accessories-text-editor.png</file>
     <file>22x22/categories/preferences-system.png</file>
     <file>22x22/categories/preferences-system-network.png</file>
     <file>22x22/categories/preferences-desktop-theme.png</file>
     <file>22x22/mimetypes/audio-x-generic.png</file>
+    <file>22x22/mimetypes/document-export.png</file>
     <file>22x22/places/folder-remote.png</file>
     <file>22x22/status/image-missing.png</file>
     <file>32x32/actions/document-new.png</file>
@@ -49,10 +53,12 @@
     <file>32x32/actions/edit-undo.png</file>
     <file>32x32/actions/folder-new.png</file>
     <file>32x32/actions/view-refresh.png</file>
+    <file>32x32/apps/accessories-text-editor.png</file>
     <file>32x32/categories/preferences-system.png</file>
     <file>32x32/categories/preferences-system-network.png</file>
     <file>32x32/categories/preferences-desktop-theme.png</file>
     <file>32x32/mimetypes/audio-x-generic.png</file>
+    <file>32x32/mimetypes/document-export.png</file>
     <file>32x32/places/folder-remote.png</file>
     <file>32x32/status/image-missing.png</file>
     <file>48x48/songbook/select_all.png</file>
@@ -70,6 +76,7 @@
     <file>scalable/actions/edit-undo.svg</file>
     <file>scalable/actions/folder-new.svg</file>
     <file>scalable/actions/view-refresh.svg</file>
+    <file>scalable/apps/accessories-text-editor.svg</file>
     <file>scalable/categories/preferences-system.svg</file>
     <file>scalable/categories/preferences-system-network.svg</file>
     <file>scalable/categories/preferences-desktop-theme.svg</file>
