add portuguese language support

--- a/icons/tango/tango.qrc
+++ b/icons/tango/tango.qrc
@@ -87,5 +87,6 @@
     <file>scalable/places/flag-fr.svg</file>
     <file>scalable/places/flag-es.svg</file>
     <file>scalable/places/flag-en.svg</file>
+    <file>scalable/places/flag-pt.svg</file>
   </qresource>
 </RCC>
