--- a/icons/tango/tango.qrc
+++ b/icons/tango/tango.qrc
@@ -20,6 +20,7 @@
     <file>16x16/actions/list-add.png</file>
     <file>16x16/actions/help-about.png</file>
     <file>16x16/actions/help-contents.png</file>
+	<file>16x16/actions/process-stop.png</file>
     <file>16x16/apps/accessories-text-editor.png</file>
     <file>16x16/categories/preferences-system.png</file>
     <file>16x16/categories/preferences-system-network.png</file>
@@ -48,6 +49,7 @@
     <file>22x22/actions/list-add.png</file>
     <file>22x22/actions/help-about.png</file>
     <file>22x22/actions/help-contents.png</file>
+	<file>22x22/actions/process-stop.png</file>
     <file>22x22/apps/accessories-text-editor.png</file>
     <file>22x22/categories/preferences-system.png</file>
     <file>22x22/categories/preferences-system-network.png</file>
@@ -76,6 +78,7 @@
     <file>32x32/actions/list-add.png</file>
     <file>32x32/actions/help-about.png</file>
     <file>32x32/actions/help-contents.png</file>
+	<file>32x32/actions/process-stop.png</file>
     <file>32x32/apps/accessories-text-editor.png</file>
     <file>32x32/categories/preferences-system.png</file>
     <file>32x32/categories/preferences-system-network.png</file>
@@ -104,6 +107,7 @@
     <file>48x48/actions/list-add.png</file>
     <file>48x48/actions/help-about.png</file>
     <file>48x48/actions/help-contents.png</file>
+	<file>48x48/actions/process-stop.png</file>
     <file>48x48/apps/accessories-text-editor.png</file>
     <file>48x48/categories/preferences-system.png</file>
     <file>48x48/categories/preferences-system-network.png</file>
