--- a/icons/songbook/songbook.qrc
+++ b/icons/songbook/songbook.qrc
@@ -6,6 +6,8 @@
     <file>22x22/select-all.png</file>
     <file>22x22/select-none.png</file>
     <file>22x22/select-invert.png</file>
+    <file>22x22/columns.png</file>
+    <file>22x22/capo.png</file>
     <file>22x22/flags/flag-en.png</file>
     <file>22x22/flags/flag-fr.png</file>
     <file>22x22/flags/flag-es.png</file>
@@ -17,6 +19,8 @@
     <file>32x32/select-all.png</file>
     <file>32x32/select-none.png</file>
     <file>32x32/select-invert.png</file>
+    <file>32x32/columns.png</file>
+    <file>32x32/capo.png</file>
     <file>32x32/flags/flag-en.png</file>
     <file>32x32/flags/flag-fr.png</file>
     <file>32x32/flags/flag-es.png</file>
@@ -28,6 +32,8 @@
     <file>48x48/select-all.png</file>
     <file>48x48/select-none.png</file>
     <file>48x48/select-invert.png</file>
+    <file>48x48/columns.png</file>
+    <file>48x48/capo.png</file>
     <file>48x48/flags/flag-en.png</file>
     <file>48x48/flags/flag-fr.png</file>
     <file>48x48/flags/flag-es.png</file>
