add support for song transposition

--- a/icons/songbook/songbook.qrc
+++ b/icons/songbook/songbook.qrc
@@ -8,6 +8,7 @@
     <file>22x22/select-invert.png</file>
     <file>22x22/columns.png</file>
     <file>22x22/capo.png</file>
+    <file>22x22/transpose.png</file>
     <file>22x22/flags/flag-en.png</file>
     <file>22x22/flags/flag-fr.png</file>
     <file>22x22/flags/flag-es.png</file>
@@ -21,6 +22,7 @@
     <file>32x32/select-invert.png</file>
     <file>32x32/columns.png</file>
     <file>32x32/capo.png</file>
+    <file>32x32/transpose.png</file>
     <file>32x32/flags/flag-en.png</file>
     <file>32x32/flags/flag-fr.png</file>
     <file>32x32/flags/flag-es.png</file>
@@ -34,6 +36,7 @@
     <file>48x48/select-invert.png</file>
     <file>48x48/columns.png</file>
     <file>48x48/capo.png</file>
+    <file>48x48/transpose.png</file>
     <file>48x48/flags/flag-en.png</file>
     <file>48x48/flags/flag-fr.png</file>
     <file>48x48/flags/flag-es.png</file>
