--- a/icons/songbook/songbook.qrc
+++ b/icons/songbook/songbook.qrc
@@ -15,6 +15,8 @@
     <file>22x22/flags/flag-fr.png</file>
     <file>22x22/flags/flag-es.png</file>
     <file>22x22/flags/flag-pt.png</file>
+    <file>22x22/x-patacrep-song.png</file>
+    <file>22x22/x-patacrep-book.png</file>
 
     <file>32x32/song.png</file>
     <file>32x32/book.png</file>
@@ -31,6 +33,8 @@
     <file>32x32/flags/flag-fr.png</file>
     <file>32x32/flags/flag-es.png</file>
     <file>32x32/flags/flag-pt.png</file>
+    <file>32x32/x-patacrep-song.png</file>
+    <file>32x32/x-patacrep-book.png</file>
 
     <file>48x48/song.png</file>
     <file>48x48/book.png</file>
@@ -47,8 +51,14 @@
     <file>48x48/flags/flag-fr.png</file>
     <file>48x48/flags/flag-es.png</file>
     <file>48x48/flags/flag-pt.png</file>
+    <file>48x48/x-patacrep-song.png</file>
+    <file>48x48/x-patacrep-book.png</file>
 
     <file>256x256/songbook-client.png</file>
     <file>256x256/book.png</file>
+
+    <file>src/x-patacrep-song.svg</file>
+    <file>src/x-patacrep-book.svg</file>
+    <file>src/songbook-client.svg</file>
  </qresource>
 </RCC>
