--- a/icons/songbook/songbook.qrc
+++ b/icons/songbook/songbook.qrc
@@ -13,6 +13,7 @@
     <file>22x22/flags/flag-fr.png</file>
     <file>22x22/flags/flag-es.png</file>
     <file>22x22/flags/flag-pt.png</file>
+    <file>22x22/flags/flag-it.png</file>
 
     <file>32x32/song.png</file>
     <file>32x32/book.png</file>
@@ -27,6 +28,7 @@
     <file>32x32/flags/flag-fr.png</file>
     <file>32x32/flags/flag-es.png</file>
     <file>32x32/flags/flag-pt.png</file>
+    <file>32x32/flags/flag-it.png</file>
 
     <file>48x48/song.png</file>
     <file>48x48/book.png</file>
@@ -41,6 +43,7 @@
     <file>48x48/flags/flag-fr.png</file>
     <file>48x48/flags/flag-es.png</file>
     <file>48x48/flags/flag-pt.png</file>
+    <file>48x48/flags/flag-it.png</file>
 
     <file>256x256/songbook-client.png</file>
     <file>256x256/book.png</file>
