--- a/icons/songbook/songbook.qrc
+++ b/icons/songbook/songbook.qrc
@@ -15,6 +15,7 @@
     <file>22x22/flags/flag-fr.png</file>
     <file>22x22/flags/flag-es.png</file>
     <file>22x22/flags/flag-pt.png</file>
+    <file>22x22/flags/flag-it.png</file>
     <file>22x22/x-patacrep-song.png</file>
     <file>22x22/x-patacrep-book.png</file>
 
@@ -33,6 +34,7 @@
     <file>32x32/flags/flag-fr.png</file>
     <file>32x32/flags/flag-es.png</file>
     <file>32x32/flags/flag-pt.png</file>
+    <file>32x32/flags/flag-it.png</file>
     <file>32x32/x-patacrep-song.png</file>
     <file>32x32/x-patacrep-book.png</file>
 
@@ -51,6 +53,7 @@
     <file>48x48/flags/flag-fr.png</file>
     <file>48x48/flags/flag-es.png</file>
     <file>48x48/flags/flag-pt.png</file>
+    <file>48x48/flags/flag-it.png</file>
     <file>48x48/x-patacrep-song.png</file>
     <file>48x48/x-patacrep-book.png</file>
 
