custom icon for artist website (applications-internet)

--- a/icons/songbook/songbook.qrc
+++ b/icons/songbook/songbook.qrc
@@ -18,6 +18,7 @@
     <file>22x22/flags/flag-it.png</file>
     <file>22x22/x-patacrep-song.png</file>
     <file>22x22/x-patacrep-book.png</file>
+    <file>22x22/applications-internet.png</file>
 
     <file>32x32/song.png</file>
     <file>32x32/book.png</file>
@@ -37,6 +38,7 @@
     <file>32x32/flags/flag-it.png</file>
     <file>32x32/x-patacrep-song.png</file>
     <file>32x32/x-patacrep-book.png</file>
+    <file>32x32/applications-internet.png</file>
 
     <file>48x48/song.png</file>
     <file>48x48/book.png</file>
@@ -56,6 +58,7 @@
     <file>48x48/flags/flag-it.png</file>
     <file>48x48/x-patacrep-song.png</file>
     <file>48x48/x-patacrep-book.png</file>
+    <file>48x48/applications-internet.png</file>
 
     <file>256x256/songbook-client.png</file>
     <file>256x256/book.png</file>
@@ -63,5 +66,6 @@
     <file>src/x-patacrep-song.svg</file>
     <file>src/x-patacrep-book.svg</file>
     <file>src/songbook-client.svg</file>
+    <file>src/applications-internet.svg</file>
  </qresource>
 </RCC>
