--- a/icons/tango/tango.qrc
+++ b/icons/tango/tango.qrc
@@ -18,6 +18,7 @@
     <file>16x16/actions/view-refresh.png</file>
     <file>16x16/actions/tools-check-spelling.png</file>
     <file>16x16/actions/list-add.png</file>
+    <file>16x16/actions/list-remove.png</file>
     <file>16x16/actions/help-about.png</file>
     <file>16x16/actions/help-contents.png</file>
     <file>16x16/actions/process-stop.png</file>
@@ -48,6 +49,7 @@
     <file>22x22/actions/view-refresh.png</file>
     <file>22x22/actions/tools-check-spelling.png</file>
     <file>22x22/actions/list-add.png</file>
+    <file>22x22/actions/list-remove.png</file>
     <file>22x22/actions/help-about.png</file>
     <file>22x22/actions/help-contents.png</file>
     <file>22x22/actions/process-stop.png</file>
@@ -78,6 +80,7 @@
     <file>32x32/actions/view-refresh.png</file>
     <file>32x32/actions/tools-check-spelling.png</file>
     <file>32x32/actions/list-add.png</file>
+    <file>32x32/actions/list-remove.png</file>
     <file>32x32/actions/help-about.png</file>
     <file>32x32/actions/help-contents.png</file>
     <file>32x32/actions/process-stop.png</file>
@@ -108,6 +111,7 @@
     <file>48x48/actions/view-refresh.png</file>
     <file>48x48/actions/tools-check-spelling.png</file>
     <file>48x48/actions/list-add.png</file>
+    <file>48x48/actions/list-remove.png</file>
     <file>48x48/actions/help-about.png</file>
     <file>48x48/actions/help-contents.png</file>
     <file>48x48/actions/process-stop.png</file>
