--- a/icons/tango/tango.qrc
+++ b/icons/tango/tango.qrc
@@ -22,6 +22,7 @@
     <file>16x16/actions/help-about.png</file>
     <file>16x16/actions/help-contents.png</file>
     <file>16x16/actions/process-stop.png</file>
+    <file>16x16/actions/document-import.png</file>
     <file>16x16/apps/accessories-text-editor.png</file>
     <file>16x16/categories/preferences-system.png</file>
     <file>16x16/categories/preferences-system-network.png</file>
@@ -53,6 +54,7 @@
     <file>22x22/actions/help-about.png</file>
     <file>22x22/actions/help-contents.png</file>
     <file>22x22/actions/process-stop.png</file>
+    <file>22x22/actions/document-import.png</file>
     <file>22x22/apps/accessories-text-editor.png</file>
     <file>22x22/categories/preferences-system.png</file>
     <file>22x22/categories/preferences-system-network.png</file>
@@ -84,6 +86,7 @@
     <file>32x32/actions/help-about.png</file>
     <file>32x32/actions/help-contents.png</file>
     <file>32x32/actions/process-stop.png</file>
+    <file>32x32/actions/document-import.png</file>
     <file>32x32/apps/accessories-text-editor.png</file>
     <file>32x32/categories/preferences-system.png</file>
     <file>32x32/categories/preferences-system-network.png</file>
@@ -115,6 +118,7 @@
     <file>48x48/actions/help-about.png</file>
     <file>48x48/actions/help-contents.png</file>
     <file>48x48/actions/process-stop.png</file>
+    <file>48x48/actions/document-import.png</file>
     <file>48x48/apps/accessories-text-editor.png</file>
     <file>48x48/categories/preferences-system.png</file>
     <file>48x48/categories/preferences-system-network.png</file>
