add preferences-desktop-locale icon

--- a/icons/tango/tango.qrc
+++ b/icons/tango/tango.qrc
@@ -56,6 +56,7 @@
     <file>22x22/actions/process-stop.png</file>
     <file>22x22/actions/document-import.png</file>
     <file>22x22/apps/accessories-text-editor.png</file>
+    <file>22x22/apps/preferences-desktop-locale.png</file>
     <file>22x22/categories/preferences-system.png</file>
     <file>22x22/categories/preferences-system-network.png</file>
     <file>22x22/categories/preferences-desktop.png</file>
